--- a/package.json
+++ b/package.json
@@ -1,28 +1,26 @@
 {
-  "name": "firequiz",
+  "name": "react-context-cli",
   "version": "0.0.4",
-  "description": "Who wants to be a JavaScript millionaire?",
-  "homepage": "https://fireship.io",
+  "description": "cli tool for create react context",
+  "homepage": "https://github.com/sezeresim/react-context-cli",
   "type": "module",
   "repository": {
     "type": "git",
-    "url": "https://github.com/fireship-io/javascript-millionaire"
+    "url": "https://github.com/sezeresim/react-context-cli"
   },
   "main": "index.js",
   "scripts": {
-    "start": "node ."
+    "start": "node --experimental-modules --es-module-specifier-resolution=node ."
   },
   "bin": "./index.js",
   "dependencies": {
     "chalk": "^4.1.2",
     "chalk-animation": "^1.6.0",
-    "child_process": "^1.0.2",
-    "eslint": "^8.23.1",
-    "figlet": "^1.5.2",
-    "gradient-string": "^2.0.0",
     "inquirer": "^8.2.0",
-    "nanospinner": "^1.0.0",
-    "prettier": "^2.7.1",
     "shelljs": "^0.8.5"
+  },
+  "devDependencies": {
+    "eslint": "^8.23.1",
+    "prettier": "^2.7.1"
   }
 }
