--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-context-cli",
+  "name": "rca-cli",
   "version": "0.0.4",
   "description": "cli tool for create react context",
   "homepage": "https://github.com/sezeresim/react-context-cli",
